fix z-index

--- a/public/src/Components/overview/imageStyle.css
+++ b/public/src/Components/overview/imageStyle.css
@@ -12,6 +12,7 @@
   margin: 10px;
   display: inline-block;
   line-height: 100px;
+  z-index: -1
 }
 
 
@@ -78,6 +79,7 @@ a.lightbox img {
   transition: opacity .5s ease-in-out;
   overflow: hidden;
 
+  z-index: 3
 }
 
 /* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */
@@ -96,8 +98,7 @@ a.lightbox img {
   box-sizing: border-box;
   transition: .5s ease-in-out;
 
-  z-index: -3;
-
+  z-index: 3
 }
 
 /* Styles the close link, adds the slide down transition */
@@ -114,8 +115,6 @@ a.lightbox-close {
   top: -80px;
   right: 0;
   transition: .5s ease-in-out;
-
-  z-index: -3;
 }
 
 /* Provides part of the "X" to eliminate an image from the close link */
@@ -131,7 +130,6 @@ a.lightbox-close:before {
   top: 10px;
   transform: rotate(45deg);
 
-  z-index: -3;
 }
 
 /* Provides part of the "X" to eliminate an image from the close link */
@@ -162,12 +160,14 @@ a.lightbox-close:after {
   max-width: 100%;
   position: absolute;
 
+  z-index: 2;
 
 }
 
 .lightbox-target:target a.lightbox-close {
   top: 0;
 }
+
 .lightbox-target-img {
   position: relative;
 }
@@ -196,14 +196,18 @@ a.lightbox-close:after {
   color: #FFFFFF;
   top: 30%;
 }
+
 .main-image {
   text-align: center;
 }
 
 .main-image-pic img {
-  width: 400px; /* width of container */
-  height: 400px; /* height of container */
+  width: 400px;
+  /* width of container */
+  height: 400px;
+  /* height of container */
   object-fit: cover;
-  object-position: 20% 10%; /* try 20px 10px */ 
+  object-position: 20% 10%;
+  /* try 20px 10px */
   border: 5px solid black;
 }
